# opentelemetry-backend-poc

./: Cargo.toml
opentelemetry-client-ts/: README.md  bun.lockb  package.json
opentelemetry-client-ts/src/: server.ts  tracing.ts
src/: main.rs
