[package]
name = "opentelemetry-server-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "^0.27.0" }
opentelemetry-proto = "^0.27.0"
tonic = "0.12.3"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = {version = "0.6.2", features = ["trace"]}
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "json"] }